force-app/main/default/objects/numm__Cfonb_Rib_Exclus__c/numm__Cfonb_Rib_Exclus__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Liste des RIB à ne pas prendre en compte lors d&#39;un import CFONB.</description>
    <label>CFONB RIB Exclus</label>
</CustomObject>