force-app/main/default/objects/numm__Cfonb_Rib_Exclus__c/fields/numm__Code_banque__c.field-meta.xml
<CustomField>
    <fullName>numm__Code_banque__c</fullName>
    <label>Code banque</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>