force-app/main/default/objects/numm__Cfonb_Rib_Exclus__c/fields/numm__Num_compte__c.field-meta.xml
<CustomField>
    <fullName>numm__Num_compte__c</fullName>
    <label>N° de compte</label>
    <length>11</length>
    <required>true</required>
    <type>Text</type>
</CustomField>