force-app/main/default/objects/numm__Cfonb_Rib_Exclus__c/listViews/numm__Tout.listView-meta.xml
<ListView>
    <fullName>numm__Tout</fullName>
    <columns>NAME</columns>
    <columns>numm__Code_banque__c</columns>
    <columns>numm__Code_guichet__c</columns>
    <columns>numm__Num_compte__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
    <language>fr</language>
</ListView>